--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,13 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.6.6</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>2.0</version>
+        </dependency>
   </dependencies>
   
   <build>
